--- a/index-k.css
+++ b/index-k.css
@@ -86,14 +86,16 @@ footer>* {
 }
 .footer {
     background-color: #EBEBEB;
+    padding: 4em 0;
 }
 
 .footer-main{
     color: #000000;
     opacity: 0.37;
-
 }
-
+.footer-fineprint{
+    margin: 3em 0 0;
+}
 .social-list {
     order: -1;
     padding: 0;
@@ -103,6 +105,7 @@ footer>* {
 }
 .social-item {
     margin: 0 .5em;
+    font-size: 2rem;
 }
 .social-link {
     color: black;
@@ -110,27 +113,31 @@ footer>* {
 
 @media (min-width: 700px) {
     .main-grid {
-        grid-template-columns: repeat(3, 1fr);
-        padding: 4em 2em;
-        gap: 2em;
+        grid-template-columns: minmax(1em, 1fr) repeat(3, minmax(150px, 320px)) minmax(1em, 1fr);
+        grid-column-gap: 2em;
     }
     .hero > * { 
-        grid-column: 1/-2;
+        grid-column: 2/span 2;
     }
    
-    .info > * {
+    .col {
         grid-column: span 1;
     }
+    .col:first-child {
+        grid-column: 2 / span 1;
+    }
 
+    .footer {
+        grid-column: 2/-2;
+    }
     .footer-main {
-        grid-column: 1/span 2;
+        grid-column: 2/ span 2;
         text-align: left;
     }
-    .footer-fineprint{
-        margin: 3em 0 0;
-    }
+
     .social-list {
-        grid-column: -1/span 1;
+        grid-column: span 1;
+        justify-content: flex-end;
         order: 0;
     }
 }
