--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ h1 {
 
 /* hero section  */
 .hero {
-    background-image: url(/img/hero-bg.jpg);
+    background-image: url(../img/hero-bg.jpg);
     background-position: center;
     background-size: cover;
     background-color: #000000;
