--- a/index.css
+++ b/index.css
@@ -57,16 +57,22 @@ header {
 }
 .nav {
     position: fixed;
+    background-color: black;
+    width: 100%;
     top: 0;
-    left: 0;
+    left: 100%;
     right: 0;
     bottom: 0;
-    background-color: black;
+    transform: translateX(0);
+}
+.nav-open {
+    transform: translateX(-100%);
 }
 .nav-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
+
     height: 100%;
     display: flex;
     flex-direction: column;
