--- a/index-k.css
+++ b/index-k.css
@@ -23,7 +23,7 @@ h1, h2, strong {
 }
 
 /* -----------------
-    layout
+   general layout : header + footer
 -------------------- */
 .main-grid {
     display: grid;
@@ -36,10 +36,15 @@ h1, h2, strong {
 footer>* {
     grid-column: 2 / span 1;
 }
+@media (min-width: 600px) {
+    .main-grid {
+        grid-template-columns: minmax(1em, 1fr)  repeat(3, minmax(150px , 320px))  minmax(1em, 1fr) ;
+    }
+}
 
-/* header */
+/* HEADER */
 header {
-    background-color: black;
+    background-color: BLACK;
 }
 .header-home {
     background: transparent;
@@ -55,7 +60,7 @@ header {
     padding: 2em 0 0;
 }
 
-/* navigation */
+/* NAVIGATION */
 .nav {
     position: fixed;
     width: 100%;
@@ -64,7 +69,6 @@ header {
     right: 0; 
     bottom: 0;
     background-color: black;
-    height: 100vh;
     transform: translateX(0);
     transition: transform 250ms;
 }
@@ -85,6 +89,7 @@ header {
 .nav-link {
     text-decoration: none;
     font-size: 2rem;
+    font-weight: 700;
     color: white;
 }
 .nav-link:hover,
@@ -110,7 +115,89 @@ header {
     padding: .5em;
     cursor: pointer;
 }
-/* hero */
+@media (min-width: 600px) {
+    .open-nav-btn,
+    .close-nav-btn {
+        display: none;
+    }
+    .nav {
+        position: initial;
+        background-color: transparent;
+    }
+    .nav-list {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+    .nav-item {
+        margin-left: 1.5em;
+    }
+    .nav-link {
+        font-size: 1rem;
+    }
+    .header-content {
+        align-items: baseline;
+    }
+ 
+}
+
+
+/* FOOTER */
+.footer {
+    background-color: #EBEBEB;
+    text-align: center;
+    padding: 4em 0;
+    display: grid;
+    grid-template-areas: 
+    ".social."
+    ".info.";
+}
+.footer-info {
+    opacity: .3;
+    grid-area: info;
+}
+.footer-fineprint {
+    font-size: .75rem;
+    margin: 3rem 0 0;
+}
+.footer-social-link {
+    grid-area: social;
+}
+.social-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    margin: 0 0 1em;
+    justify-content: center;
+}
+.social-item {
+    margin: .5em;
+}
+.social-link {
+    text-decoration: none;
+    color: #000000;
+    font-size: 2rem;
+
+}
+@media (min-width: 600px) {
+    .footer {
+        grid-template-areas: 
+        ". info info social.";
+    }
+    .footer-info {
+        text-align: left;
+    }
+    .footer-social-link {
+        justify-self: flex-end;
+        padding: 0;
+    }
+}
+
+
+
+
+/* -----------------
+  HERO & INFO section
+-------------------- */
 .hero {
     background-image: url(/img/hero-bg.jpg);
     background-position: center;
@@ -153,73 +240,15 @@ header {
     margin: 1.5em 0;
 }
 
-/* footer */
-.footer {
-    background-color: #EBEBEB;
-    text-align: center;
-    padding: 4em 0;
-    display: grid;
-    grid-template-areas: 
-    ".social."
-    ".info.";
-}
-.footer-info {
-    opacity: .3;
-    grid-area: info;
-}
-.footer-fineprint {
-    font-size: .75rem;
-    margin: 3rem 0 0;
-}
-.footer-social-link {
-    grid-area: social;
-}
-.social-list {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    margin: 0 0 1em;
-    justify-content: center;
-}
-.social-item {
-    margin: .5em;
-}
-.social-link {
-    text-decoration: none;
-    color: #000000;
-    font-size: 2rem;
-
-}
-
-/* ----------------
-    BIG SCREEN
-------------------- */
 @media (min-width: 600px) {
-    .main-grid {
-        grid-template-columns: minmax(1em, 1fr)  repeat(3, minmax(150px , 320px))  minmax(1em, 1fr) ;
-    }
-    /* main */
-    .hero>*{
-        grid-column: 2/-2;
-        margin-right: 35%;
-    }
-    .col {
-        grid-column: span 1;
-    }
-    .col:first-child {
-        grid-column: 2 / span 1;
-    }
-    /* footer */
-    .footer {
-        grid-template-areas: 
-        ". info info social.";
-    }
-    .footer-info {
-        text-align: left;
-    }
-    .footer-social-link {
-        justify-self: flex-end;
-        padding: 0;
-
-    }
+        .hero>*{
+            grid-column: 2/-2;
+            margin-right: 35%;
+        }
+        .col {
+            grid-column: span 1;
+        }
+        .col:first-child {
+            grid-column: 2 / span 1;
+        }
 }
