--- a/index.css
+++ b/index.css
@@ -172,6 +172,17 @@ h1 {
     margin: 1.5em 0;
     color:#000000;
 }
+.section-title::after {
+    content: "";
+    display: block;
+    width: 90px;
+    height: 3px;
+    background-color: #FFE600;
+    margin-top: 10px;
+}
+.section-title-center::after {
+    margin: 10px auto 0;
+}
 .col p{
     color:#404040;
 }
@@ -246,23 +257,33 @@ h1 {
 .about>* {
     grid-column: 2/-2;
 }
-.page-title {
+
+.page-title{
     text-align: center;
-    margin: 2em 0;
-}
-.page-title h1{
+    margin: 2em 0 .5em;
     color: #000000;
     font-size: 3rem;
     font-weight: 700;
+    justify-self: center;
 }
-.page-title p{
+.page-title::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: .5em;
+    background-color:  #FFE600;
+    margin: -.5em .5em;
+}
+.page-subtitle{
     font-size: 1rem;
+    margin-bottom: 2em;
 }
 .page-image {
     box-shadow: 5px 5px 0px black, 10px 10px 0 #FFE600;
+    margin-bottom: 2em;
 }
 .main-text {
-    margin: 2em 0;
+    margin: 0;
 }
 .main-text .section-title {
     margin: 0;
@@ -274,10 +295,10 @@ h1 {
     }
     .page-image {
        grid-column: 2;
+       margin-top: 0;
     }
     .main-text {
         grid-column: 3/-2;
-        margin-top: 0;
     }
 
 }
