--- a/index.css
+++ b/index.css
@@ -323,18 +323,19 @@ label {
 }
 input {
     margin: .5em 0 1.5em; 
-    width: 100%;
-    height: 2.5em;
+    font: inherit;
+    padding: .5em;
 }
 textarea {
     height: 5em;
+    resize: none;
 }
 .send-email {
     color: black;
     font-weight: 700;
 }
 .submit-btn {
-    margin-left: auto;
+    justify-self: end;
 }
 
 @media (min-width: 700px) {
