--- a/index.css
+++ b/index.css
@@ -96,6 +96,9 @@ h1 {
 .nav-link:focus {
     color: #FFE600;
 }
+.current {
+    border-bottom: 2px solid #FFE600;
+}
 .close-nav-btn {
     color: #FFE600;
     border: 0;
@@ -131,9 +134,11 @@ h1 {
         flex-direction: row;
         justify-content: flex-start;
     }
+    .nav-item{
+        margin-left: 2em;
+    }
     .nav-link {
         font-size: 1rem;
-        margin-left: 2em;
     }
     .header .nav {
         background: transparent;
@@ -162,6 +167,10 @@ h1 {
     justify-self: flex-start;
     border: none;
     font-family: 'Montserrat';
+}
+.btn:hover,
+.btn:focus {
+    background-color: #e4c23a;
 }
 
 /* info section */
@@ -338,7 +347,7 @@ textarea {
     justify-self: end;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 600px) {
     .left-column{
         grid-column: 2;
     }
@@ -349,5 +358,27 @@ textarea {
     }
     .page-image { 
         margin-bottom: 0;
+    }
+    .form {
+        display: grid;
+        grid-template-columns: repeat(2,minmax(100px, 1fr));
+        grid-auto-flow: dense;
+        grid-gap: 0 1em;
+    }
+    .fname-label,
+    .fname-input {
+        grid-column: 1;
+    }
+    .email-label,
+    .email-input {
+        grid-column: 2;
+    }
+    .message-label,
+    .message-textarea,
+    .submit-btn {
+        grid-column: 1 / -1;
+    }
+    .submit-btn {
+        justify-self: end;
     }
 }
